--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,29 +1,30 @@
-name: Build and Push Docker Image
+name: "Build and push image"
 
 on:
-  push:
-    branches:
-      - main  # یا نام شاخه‌ای که می‌خواهید به آن پوش کنید
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: "Build images"
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      DOCKERHUB_REPOSITORY: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v1.6.0
+      - name: Login to DockerHub
+        uses: docker/login-action@v1.14.1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+      - name: Build and push images to DockerHub
+        uses: docker/build-push-action@v2.9.0
         with:
-          context: .
           push: true
-          tags: ghcr.io/aligholami77/argo-pass:latest  # یا نسخه خاص که می‌خواهید
+          platforms: linux/amd64
+          tags: ${{ env.DOCKERHUB_REPOSITORY }}
