--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1.14.1
         with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
+          username: "aligholami77"
+          password: "Ugdyghld77"
       - name: Build and push images to DockerHub
         uses: docker/build-push-action@v2.9.0
         with:
